classDiagram
  direction TB

  class Usuario {
    +Long id
    +String nome
    +String email
    +String senha
  }

  class Drop {
    +Long id
    +String titulo
    +String conteudo
    +Date dataPublicacao
  }

  class DropDAO {
    +void salvar(Drop drop)
    +List<Drop> listar()
  }

  class JPAUtil {
    +EntityManager getEntityManager()
  }

  Usuario "1" <-- "0..*" Drop : autor
  DropDAO ..> Drop : persiste
  DropDAO ..> JPAUtil : obtem EntityManager

